 * graphics:
   * terrain:
     * new ice transition
     * modified swamp color
   * units:
     * new teamcolored baseframes: grand marshal, human assassin, sergeant
   * misc:
     * new icons for preferences
 * multiplayer maps:
   * revised maps: Blitz, Den of Onis, Meteor Lake, Lagoon
 * multiplayer
   * fixed passing controller in mp campaign (bug #7936)

Version 1.1.14:
 * campaigns:
   * Eastern Invasion:
     * added a starting position for the seventh enemy (bug #7918)
   * Heir to the Throne:
     * fixed the signpost image in the narration (patch #638)
   * The Rise of Wesnoth:
     * fixed bad glitches in the map Rise of Wesnoth
   * The South Guard:
     * made it possible to finish "Into the Depths" even without enough gold
       to pay the trolls
 * graphics:
   * terrain:
     * new special transition between chasm and dwarvish castle
     * new lava transitions (looks like completely new lava)
     * fixed glitches with impassable moutains at the edges of maps
     * resolved all glitches with cave walls
   * units:
     * new teamcolored baseframes: Halberdier, Heavy Infanfantry, Pikeman, 
       Shocktrooper, Siegetrooper
     * new baseframe: Yeti
     * some new skulls for skelleton units
   * misc:
     * new attack icon for wooden sword
     * new dwarven gate
     * new portrait for Asheviere
     * new, better looking hexgrid
 * language and i18n:
   * switch back to non utf8 locale definition to fix some problems,
     --enable-dummy-locales should work again
   * updated man-pages: French, German
   * updated translations: Czech, Esperanto, French, Greek, Italian, Russian
 * multiplayer maps:
    * revised multiplayer maps: 3p Morituri, 4p Morituri, Blue Water Province, 
      Den of Onis, Hexcake, Isar's Cross, Merkwuerdigliebe, Meteor Lake, 
      Sablestone Delta, Sulla's Ruins
 * misc:
   * fixed a crash in the recall event_handler
   * fixed game crashes durin AI turn (#7988)
   * fixed graphic glitch with large units