@@ -14,6 +14,8 @@ Version 1.1.14+svn:
    * revised maps: Blitz, Den of Onis, Meteor Lake, Lagoon
  * multiplayer
    * fixed passing controller in mp campaign (bug #7936)
+ * misc:
+   * fixed the AI usage of attack_weight (bug #7953)
 
 Version 1.1.14:
  * campaigns:
